# weather-station

./: .gitignore  Cargo.toml  README.md  build.rs
pcb/: .gitignore  custom_symbols.bak  custom_symbols.kicad_sym  pcb.kicad_pro  pcb.kicad_sch
src/: ha.rs  lib.rs  main.rs  wifi.rs
