[package]
name = "weather-station"
version = "0.1.0"
authors = ["tobinio <Tobias.frischmann1@gmail.com>"]
edition = "2021"
resolver = "2"

[[bin]]
name = "weather-station"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51.0"
esp-idf-hal = "0.45.2"

bosch-bme680 = "1.0.4"
lcd-lcm1602-i2c = "0.3.0"
embedded-hal-bus = { version = "0.3.0", features = ["std"] }

[build-dependencies]
embuild = "0.33"
