[package]
edition      = "2024"
name         = "weather-station"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "weather-station"
path = "./src/main.rs"

# Overwrite because of https://github.com/esp-rs/esp-hal/issues/4545
[patch.crates-io]
esp-rom-sys = {git = "https://github.com/esp-rs/esp-hal", package = "esp-rom-sys", rev="8ee7e814b94275e7b5a47e91820b5f7c98a105c7"}

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }

embassy-net = { version = "0.7.1", features = ["dhcpv4", "dns", "log", "tcp", "udp"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
lcd-lcm1602-i2c = { version = "0.3.0", features = ["async"] }

bosch-bme680 = { version = "1.0.4", features = ["embedded-hal-async"] }
scd4x = { version = "0.4.1", features = ["embedded-hal-async", "scd41"] }

critical-section = "1.2.0"
static_cell = "2.1.1"
log = "0.4.29"

embassy-sync = "0.7.2"
embassy-embedded-hal = "0.5.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
    "defmt",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
    "dns-max-server-count-4",
] }
embassy-ha = { git= "https://github.com/ToBinio/embassy-ha" }

[build-dependencies]
dotenvy = "0.15"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
